Selection gaps don't repaint correctly with transforms https://bugs.webkit.org/show_bug.cgi?id=111000

Patch by Shezan Baig <sbaig1@bloomberg.net> on 2013-04-11
Reviewed by Simon Fraser.

Source/WebCore:

When computing offsetFromRepaintContainer, we need to add UseTransforms
to the MapCoordinateFlags argument. Note that ApplyContainerFlip is
the default value for the flag, so this change effectively only adds
the UseTransforms flag.

Tests: fast/repaint/selection-gap-absolute-child.html
       fast/repaint/selection-gap-fixed-child.html
       fast/repaint/selection-gap-flipped-absolute-child.html
       fast/repaint/selection-gap-flipped-fixed-child.html
       fast/repaint/selection-gap-transformed-absolute-child.html
       fast/repaint/selection-gap-transformed-fixed-child.html

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::selectionGapRectsForRepaint):

LayoutTests:

* fast/repaint/selection-gap-absolute-child-expected.txt: Added.
* fast/repaint/selection-gap-absolute-child.html: Added.
* fast/repaint/selection-gap-fixed-child-expected.txt: Added.
* fast/repaint/selection-gap-fixed-child.html: Added.
* fast/repaint/selection-gap-flipped-absolute-child-expected.txt: Added.
* fast/repaint/selection-gap-flipped-absolute-child.html: Added.
* fast/repaint/selection-gap-flipped-fixed-child-expected.txt: Added.
* fast/repaint/selection-gap-flipped-fixed-child.html: Added.
* fast/repaint/selection-gap-transformed-absolute-child-expected.txt: Added.
* fast/repaint/selection-gap-transformed-absolute-child.html: Added.
* fast/repaint/selection-gap-transformed-fixed-child-expected.txt: Added.
* fast/repaint/selection-gap-transformed-fixed-child.html: Added.

Canonical link: https://commits.webkit.org/132870@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148258 268f45cc-cd09-0410-ab3c-d52691b4dbfc